# aerial_humanoid

./: package.xml
.github/workflows/: ros_build.yaml
aerial_humanoid/: CMakeLists.txt  package.xml
aerial_humanoid_description/humanoid6/: CMakeLists.txt
aerial_humanoid_description/humanoid6/meshes/: base_link.dae  larm_link2.3dxml  larm_link3.dae  (+9 more)
config/: joint_names_humanoid6.yaml
humanoid6/launch/: display.launch  gazebo.launch
humanoid6/meshes/: base_link.3dxml  larm_link2.dae  larm_link4.3dxml  larm_link6.dae  larm_link7.dae  rarm_link2.dae  rarm_link6.3dxml  rarm_link7.3dxml  rarm_link7.dae
humanoid6/urdf/: humanoid6.urdf  humanoid6_modified.urdf
humanoid8/: CMakeLists.txt  package.xml
humanoid8/config/: joint_names_humanoid8.yaml
humanoid8/launch/: display.launch  gazebo.launch
humanoid8/meshes/: larm_link1.3dxml  larm_link2.3dxml  larm_link2.dae  larm_link3.dae  larm_link4.dae  larm_link5.3dxml  larm_link6.3dxml  larm_link6.dae  larm_link7.3dxml  larm_link7.dae  lleg_link2.3dxml  lleg_link2.dae  lleg_link5.3dxml  lleg_link6.3dxml  lleg_link7.dae  rarm_link3.3dxml  rarm_link4.3dxml  rarm_link5.3dxml  rarm_link5.dae  rarm_link6.3dxml  rarm_link6.dae  rarm_link7.dae  rleg_link1.3dxml  rleg_link2.3dxml  rleg_link4.3dxml  rleg_link4.dae  rleg_link5.dae  rleg_link6.dae  rleg_link7.3dxml  rleg_link7.dae
humanoid8/urdf/: humanoid8.csv  humanoid8.urdf
launch/: display.launch
meshes/: larm_link1.3dxml  larm_link1.dae  larm_link3.3dxml  larm_link5.3dxml  larm_link6.3dxml  larm_link7.3dxml  rarm_link2.3dxml  rarm_link3.3dxml  rarm_link6.dae
(+30 files in other folders)
